<resources>
    <string name="app_name">TourMeApp</string>

    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="lName">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="bLogin">LOGIN</string>
    <string name="bRegister">REGISTER</string>
    <string name="registerLink">Not a member? Sign up.</string>
    <string name="loginLink">Already registred! Login.</string>
    <string name="action_settings">LOGOUT</string>
    <string name="title_activity_login">Login</string>

    <!--Main strings-->
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_landmarks">Landmarks</string>
    <string name="title_activity_landmark_list">Landmark_list</string>
    <string name="title_activity_landmark_info">Landmark_info</string>

</resources>
